More permgen for tests